--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plumbing Company</title>
 
+    <link rel="stylesheet" href="https://use.typekit.net/vks3ohq.css">
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
