--- a/index.html
+++ b/index.html
@@ -67,5 +67,34 @@
     </div>
  </nav>
 
+ <section id="home">
+
+    <div class="container">
+        <div class="row">
+
+            <div class="col-md-7">
+                <div class="home-body">
+
+                    <div class="home-heading">
+                        <h1>Headline Placeholder Text Goes Here</h1>
+                    </div>
+
+                    <div class="home-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                           sed do eiusmod tempor incididunt.</p>
+                    </div>
+
+                    <div class="home-buttons">
+                        <a href="quote" class="btn primary-btn me-2">Request A Quote</a>
+                        <a href="tel:666-123-4567" class="btn secondary-btn">
+                          <span><img src="./images/header-btn-call-icon.svg" alt="call-icon"></span>
+                          666-123-4567</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+ </section>
+
 </body>
 </html>
