added value section

--- a/index.html
+++ b/index.html
@@ -95,6 +95,53 @@
         </div>
     </div>
  </section>
+ 
+ <section id="value">
+    <div class="container">
+        <div class="row">
+
+                <div class="col-md-4">
+                    <div class="value-body d-flex align-items-center">
+
+                        <div class="value-icon">
+                            <img src="./images/value-stack-icon01.svg" alt="stack-icon01">
+                        </div>
+
+                        <div class="value-heading">
+                            <h5>Headline Placeholder Text Goes Here</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="value-body d-flex align-items-center">
+
+                        <div class="value-icon">
+                            <img src="./images/value-stack-icon01.svg" alt="stack-icon01">
+                        </div>
+
+                        <div class="value-heading">
+                            <h5>Headline Placeholder Text Goes Here</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="value-body d-flex align-items-center">
+
+                        <div class="value-icon">
+                            <img src="./images/value-stack-icon01.svg" alt="stack-icon01">
+                        </div>
+
+                        <div class="value-heading">
+                            <h5>Headline Placeholder Text Goes Here</h5>
+                        </div>
+                    </div>
+                </div>
+
+        </div>
+    </div>
+ </section>
 
 </body>
 </html>
