--- a/index.html
+++ b/index.html
@@ -143,5 +143,48 @@
     </div>
  </section>
 
+ <section id="stakes">
+    <div class="container">
+        <div class="row align-items-center justify-content-between">
+
+            <div class="col-md-6">
+                <div class="stakes-image">
+                    <img src="./images/stake-section-img.jpg" alt="stakes-image">
+                </div>
+            </div>
+
+            <div class="col-md-5">
+                <div class="stakes-body">
+
+                    <div class="stakes-main-heading">
+                        <h6>What's on Stake</h6>
+                    </div>
+
+                    <div class="stakes-heading">
+                        <h2>Section Headline Text Goes Here</h2>
+                    </div>
+
+                    <div class="stakes-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit, sed do eiusmod tempor incididunt ut labore et
+                          dolore magna aliqua. Ultrices mi tempus imperdiet
+                          nulla. Magna etiam tempor orci eu lobortis elementum
+                          nibh.</p>
+                        <p>Tortor pretium viverra suspendisse potenti. Ac felis
+                           donec et odio pellentesque diam volutpat commodo.
+                           Tortor dignissim convallis aenean et tortor. Porta
+                           non pulvinar neque laoreet. </p>
+                    </div>
+
+                    <div class="stakes-button">
+                        <a href="quote" class="btn primary-btn">Request A Quote</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+ </section>
+
 </body>
 </html>
