--- a/index.html
+++ b/index.html
@@ -186,5 +186,101 @@
     </div>
  </section>
 
+ <section id="services">
+     <div class="conatiner">
+
+        <div class="services-body text-center">
+
+            <div class="services-main-heading">
+                <h6>Our Services</h6>
+            </div>
+
+            <div class="services-heading">
+                <h2>Section Headline Text Goes Here</h2>
+            </div>
+
+        </div>
+
+        <div class="row justify-content-center">
+
+            <div class="col-md-4">
+                <div class="services-card">
+
+                    <div class="services-card-image">
+                        <img src="./images/services-img01.jpg" alt="img01">
+                    </div>
+
+                    <div class="services-card-icon">
+                        <img src="./images/services-sinks&drains-icon01.svg" alt="sinks&drains-icon">
+                    </div>
+
+                    <div class="services-card-heading">
+                        <h5>Sinks & Drains</h5>
+                    </div>
+
+                    <div class="services-card-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod.</p>
+                    </div>
+
+                    <div class="services-card-button">
+                        <a href="#quote" class="btn fourth-btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="services-card">
+
+                    <div class="services-card-image">
+                        <img src="./images/services-images02.jpg" alt="img02">
+                    </div>
+
+                    <div class="services-card-icon">
+                        <img src="./images/services-drainage-cleaning-icon02.svg" alt="drainage-cleaning-icon">
+                    </div>
+
+                    <div class="services-card-heading">
+                        <h5>Drainage Cleaning</h5>
+                    </div>
+
+                    <div class="services-card-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod.</p>
+                    </div>
+
+                    <div class="services-card-button">
+                        <a href="#quote" class="btn fourth-btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="services-card">
+
+                    <div class="services-card-image">
+                        <img src="./images/services-image03.jpg" alt="img03">
+                    </div>
+
+                    <div class="services-card-icon">
+                        <img src="./images/services-monthly-maintainence-icon03.svg" alt="monthly-maintainence-icon">
+                    </div>
+
+                    <div class="services-card-heading">
+                        <h5>Monthly Maintenance</h5>
+                    </div>
+
+                    <div class="services-card-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod.</p>
+                    </div>
+
+                    <div class="services-card-button">
+                        <a href="#quote" class="btn fourth-btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+     </div>
+ </section>
+
 </body>
 </html>
