--- a/index.html
+++ b/index.html
@@ -282,5 +282,31 @@
      </div>
  </section>
 
+ <section id="cta">
+    <div class="container text-center">
+        <div class="cta-body">
+
+            <div class="cta-main-heading">
+                <h6>Call To Action</h6>
+            </div>
+
+            <div class="cta-heading">
+                <h2>Section Headline Text Here</h2>
+            </div>
+
+            <div class="cta-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                   sed do eiusmod tempor incididunt ut labore et dolore magna
+                   aliqua. Ultrices mi tempus imperdiet nulla.</p>
+            </div>
+
+            <div class="cta-button">
+                <a href="#quote" class="btn third-btn">Request a Quote</a>
+            </div>
+        </div>
+
+    </div>
+ </section>
+
 </body>
 </html>
