--- a/index.html
+++ b/index.html
@@ -308,5 +308,108 @@
     </div>
  </section>
 
+ <section id="work">
+    <div class="container text-center">
+
+        <div class="work-body">
+
+            <div class="work-main-heading">
+                <h6>How It Works</h6>
+            </div>
+
+            <div class="work-heading">
+                <h2>Section Headline Text Goes Here</h2>
+            </div>
+
+            <div class="work-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                   sed do eiusmod tempor incididunt ut labore et dolore magna
+                   aliqua.</p>
+            </div>
+        </div>
+
+
+        <div class="row">
+
+            <div class="col-md-4">
+                <div class="work-card">
+
+                    <div class="work-card-icon">
+                        <img src="./images/work-step-one-icon.svg" alt="work-step-one-icon">
+                    </div>
+
+                    <div class="work-card-shadow">
+                        <img src="./images/work-01-icon.svg" alt="work-01-icon">
+                    </div>
+
+                    <div class="work-card-heading">
+                        <h5>Step One Here</h5>
+                    </div>
+
+                    <div class="work-card-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                           sed do eiusmod tempor incididunt.</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="work-card">
+
+                    <div class="work-card-icon">
+                        <img src="./images/work-step-two-icon.svg" alt="work-step-two-icon">
+                    </div>
+
+                    <div class="work-card-shadow">
+                        <img src="./images/work-02-icon.svg" alt="work-02-icon">
+                    </div>
+
+                    <div class="work-card-heading">
+                        <h5>Step Two Here</h5>
+                    </div>
+
+                    <div class="work-card-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                           sed do eiusmod tempor incididunt.</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="work-card">
+
+                    <div class="work-card-icon">
+                        <img src="./images/work-step-three-icon.svg" alt="work-step-three-icon">
+                    </div>
+
+                    <div class="work-card-shadow">
+                        <img src="./images/work-03-icon.svg" alt="work-03-icon">
+                    </div>
+
+                    <div class="work-card-heading">
+                        <h5>Step Three Here</h5>
+                    </div>
+
+                    <div class="work-card-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                           sed do eiusmod tempor incididunt.</p>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="work-button">
+            <a href="#quote" class="btn primary-btn">Request a Quote</a>
+        </div>
+
+        </div>
+    </div>
+ </section>
+
 </body>
 </html>
