--- a/index.html
+++ b/index.html
@@ -411,5 +411,102 @@
     </div>
  </section>
 
+ <section id="gallery">
+     <div class="container">
+
+        <div class="row justify-content-between align-items-center">
+
+            <div class="col-md-5">
+                <div class="gallery-body">
+
+                    <div class="gallery-main-heading">
+                        <h6>Gallery</h6>
+                    </div>
+        
+                    <div class="work-heading">
+                        <h2>Our Recent Projects</h2>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-auto">
+
+                <div class="gallery-icon">
+                    <img src="./images/gallery-arrow-icon.svg" alt="arrow-icon">
+                </div>
+            </div>
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-md-4">
+                <div class="gallery-card">
+
+                    <div class="gallery-images">
+                        <img src="./images/gallery-img-01.jpg" alt="gallery-img-01">
+                    </div>
+
+                    <div class="gallery-category">
+                        <h5>Category</h5>
+                    </div>
+
+                    <div class="gallery-project">
+                        <h4>Project Name Here</h4>
+                    </div>
+
+                    <div class="over-lay"></div>
+
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="gallery-card">
+
+                    <div class="gallery-images">
+                        <img src="./images/gallery-img-02.jpg" alt="gallery-img-02">
+                    </div>
+
+                    <div class="gallery-category">
+                        <h5>Category</h5>
+                    </div>
+
+                    <div class="gallery-project">
+                        <h4>Project Name Here</h4>
+                    </div>
+
+                    <div class="over-lay"></div>
+
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="gallery-card">
+
+                    <div class="gallery-images">
+                        <img src="./images/gallery-img-03.jpg" alt="gallery-img-03">
+                    </div>
+
+                    <div class="gallery-category">
+                        <h5>Category</h5>
+                    </div>
+
+                    <div class="gallery-project">
+                        <h4>Project Name Here</h4>
+                    </div>
+
+                    <div class="over-lay"></div>
+
+                </div>
+            </div>
+
+        </div>
+
+     </div>
+ </section>
+
+
+
 </body>
 </html>
