--- a/index.html
+++ b/index.html
@@ -506,7 +506,51 @@
      </div>
  </section>
 
+ <section id="testimonial">
+     <div class="container">
+         <div class="row">
 
+            <div class="col-md-7">
+                <div class="testimonial-body">
+
+                    <div class="testimonial-quote-icon">
+                        <img src="./images/testimonial-quote-icon.svg" alt="quote-icon">
+                    </div>
+
+                    <div class="testimonial-main-heading">
+                        <h6>Testimonials</h6>
+                    </div>
+
+                    <div class="testimonial-heading">
+                        <h2>Headline Text Here</h2>
+                    </div>
+
+                    <div class="testimonial-stars">
+                        <img src="./images/testimonial-star-icon.svg" alt="star-icon">
+                    </div>
+
+                    <div class="testimonial-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                          sed do eiusmod tempor incididunt ut labore et dolore magna
+                          aliqua. Ultrices mi tempus imperdiet nulla magna etiam.</p>
+                    </div>
+
+                    <div class="testimonial-name">
+                        <h3>Peter Garfield</h3>
+                    </div>
+
+                    <div class="testimonial-address">
+                        <h4>Bakersfield, CA</h4>
+                    </div>
+
+                    <div class="testimonial-icon">
+                        <img src="./images/testimonial-dots-icon.svg" alt="dots">
+                    </div>
+                </div>
+            </div>
+         </div>
+     </div>
+ </section>
 
 </body>
 </html>
