--- a/index.html
+++ b/index.html
@@ -552,5 +552,54 @@
      </div>
  </section>
 
+ <section id="about">
+     <div class="container">
+         <div class="row justify-content-between align-items-center">
+
+            <div class="col-md-6">
+                <div class="about-large-image">
+                    <img src="./images/about-us-img.jpg" alt="large-image">
+                </div>
+                <div class="about-small-image">
+                    <img src="./images/about-us-small-img.svg" alt="small-image">
+                </div>
+            </div>
+
+            <div class="col-md-5">
+                <div class="about-body">
+
+                    <div class="about-main-heading">
+                        <h6>About Us</h6>
+                    </div>
+
+                    <div class="about-heading">
+                        <h2>Section Headline Text Goes Here</h2>
+                    </div>
+
+                    <div class="about-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                           sed do eiusmod tempor incididunt ut labore et dolore magna
+                           aliqua. Ultrices mi tempus imperdiet nulla. Magna etiam
+                           tempor orci eu lobortis elementum nibh.</p>
+                    </div>
+
+                    <div class="about-points">
+                        <ul>
+                            <li>Sorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                            <li>Eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                            <li>Ultrices mi tempus imperdiet nulla.</li>
+                        </ul>
+                    </div>
+
+                    <div class="about-button">
+                        <a href="#quote" class="btn primary-btn">Request a Quote</a>
+                    </div>
+
+                </div>
+            </div>
+         </div>
+     </div>
+ </section>
+
 </body>
 </html>
