--- a/index.html
+++ b/index.html
@@ -601,5 +601,37 @@
      </div>
  </section>
 
+ <section id="subscribe">
+     <div class="container">
+         <div class="row">
+
+            <div class="col-md-7">
+                <div class="subscribe-body">
+
+                    <div class="subscribe-heading">
+                        <h2>Offer Section Headline Placeholder Text Goes Here</h2>
+                    </div>
+
+                    <div class="subscribe-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                           sed do eiusmod tempor incididunt ut labore et dolore magna
+                           aliqua.</p>
+                    </div>
+
+                    <div class="subscribe-button">
+                        <a href="#quote" class="btn third-btn">Subscribe Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="subscribe-image">
+                    <img src="" alt="">
+                </div>
+            </div>
+         </div>
+     </div>
+ </section>
+
 </body>
 </html>
