--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
  </section>
 
  <section id="services">
-     <div class="conatiner">
+     <div class="container">
 
         <div class="services-body text-center">
 
@@ -439,69 +439,7 @@
 
         </div>
 
-        <div class="row">
-
-            <div class="col-md-4">
-                <div class="gallery-card">
-
-                    <div class="gallery-images">
-                        <img src="./images/gallery-img-01.jpg" alt="gallery-img-01">
-                    </div>
-
-                    <div class="gallery-category">
-                        <h5>Category</h5>
-                    </div>
-
-                    <div class="gallery-project">
-                        <h4>Project Name Here</h4>
-                    </div>
-
-                    <div class="over-lay"></div>
-
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="gallery-card">
-
-                    <div class="gallery-images">
-                        <img src="./images/gallery-img-02.jpg" alt="gallery-img-02">
-                    </div>
-
-                    <div class="gallery-category">
-                        <h5>Category</h5>
-                    </div>
-
-                    <div class="gallery-project">
-                        <h4>Project Name Here</h4>
-                    </div>
-
-                    <div class="over-lay"></div>
-
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="gallery-card">
-
-                    <div class="gallery-images">
-                        <img src="./images/gallery-img-03.jpg" alt="gallery-img-03">
-                    </div>
-
-                    <div class="gallery-category">
-                        <h5>Category</h5>
-                    </div>
-
-                    <div class="gallery-project">
-                        <h4>Project Name Here</h4>
-                    </div>
-
-                    <div class="over-lay"></div>
-
-                </div>
-            </div>
-
-        </div>
+        
 
      </div>
  </section>
@@ -510,7 +448,7 @@
      <div class="container">
          <div class="row">
 
-            <div class="col-md-7">
+            <div class="col-md-6">
                 <div class="testimonial-body">
 
                     <div class="testimonial-quote-icon">
@@ -585,9 +523,17 @@
 
                     <div class="about-points">
                         <ul>
-                            <li>Sorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li>Eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                            <li>Ultrices mi tempus imperdiet nulla.</li>
+                            <li><span><img src="./images/about-right-mark-icon.svg" 
+                                 alt="right-mark-icon"></span>Sorem ipsum dolor sit amet,
+                                 consectetur adipiscing elit.</li>
+
+                            <li><span><img src="./images/about-right-mark-icon.svg"
+                                 alt="right-mark-icon"></span>Eiusmod tempor incididunt ut
+                                 labore et dolore magna aliqua.</li>
+
+                            <li><span><img src="./images/about-right-mark-icon.svg"
+                                 alt="right-mark-icon"></span>Ultrices mi tempus imperdiet
+                                 nulla.</li>
                         </ul>
                     </div>
 
@@ -666,15 +612,16 @@
                         </div>
 
                         <div class="footer-nav-links">
+
                             <div class="about-link">
                                 <a href="#about">About Us</a>
                             </div>
 
-                            <div class="services-link"></div>
+                            <div class="services-link">
                                 <a href="#services">Services</a>
                             </div>
 
-                            <div class="testimonial-link"></div>
+                            <div class="testimonial-link">
                                 <a href="#testimonial">Testimonials</a>
                             </div>
 
@@ -682,7 +629,7 @@
                                 <a href="#contact">Contact Us</a>
                             </div>
 
-                        </div>
+                        </div>                        
                     </div>
                 </div>
 
@@ -742,7 +689,7 @@
                             <a href="tel:666-123-4567"><span>
                                <img src="./images/footer-call-icon.svg" alt="call-icon"></span>666-123-4567</a>
                             </div>
-                            
+
                         </div>
 
                     </div>
