correcting gallery section

--- a/index.html
+++ b/index.html
@@ -439,7 +439,54 @@
 
         </div>
 
-        
+        <div class="row justify-content-center">
+
+            <div class="col-md-4">
+                <div class="gallery-img-01">
+
+                    <div class="gallery-category">
+                        <h5>Category</h5>
+                    </div>
+
+                    <div class="gallery-project">
+                        <h4>Project Name Here</h4>
+                    </div>
+
+                    <div class="overlay"></div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="gallery-img-02">
+
+                    <div class="gallery-category">
+                        <h5>Category</h5>
+                    </div>
+
+                    <div class="gallery-project">
+                        <h4>Project Name Here</h4>
+                    </div>
+
+                    <div class="overlay"></div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="gallery-img-03">
+
+                    <div class="gallery-category">
+                        <h5>Category</h5>
+                    </div>
+
+                    <div class="gallery-project">
+                        <h4>Project Name Here</h4>
+                    </div>
+
+                    <div class="overlay"></div>
+                </div>
+            </div>
+
+        </div>     
 
      </div>
  </section>
